2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Check static problem conversion through copy constructor.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Fix problem conversion.
	* src/function.cc: Check that the problem arity is positive.
	* tests/Makefile.am: Add new test.
	* tests/common.hh: Include iostream.
	* tests/problem-cc.at: Copy from tests/testsuite.at.
	* tests/problem-cc.cc: New.
	* tests/problem-cc.stdout: New.
	* tests/testsuite.at: Include new test.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix upload script.
	* doc/aist-upload.sh.in: For wput, returning 1 is
        not an error.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Copy problem into the solver.
	* include/liboptimization/solver.hh: Copy the problem.
	* include/liboptimization/solver.hxx: Do not convert
        dynamically a problem implicitly.
	* src/doc.hh: Fix typo.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement problem conversion.
	* build-aux/boost.m4,
	* configure.ac: Search for Boost.MPL.
	* include/Makefile.am: Add problem-converter to header list.
	* include/liboptimization/problem-converter.hh: New.
	* include/liboptimization/problem-converter.hxx: New.
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx: Implement generic
        copy constructors.
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx: Convert problem if
        the providen one is not of the expected complexity.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Add script that uploads documentation to AIST server.
	* configure.ac: Generate the shell script.
	* doc/aist-upload.sh.in: New.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Normalize public interface.
	* include/liboptimization/generic-solver.hh,
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx,
	* include/liboptimization/solver-error.hh,