@@ -1,5 +1,10 @@
 2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance copy constructor check for Problem class.
+	* tests/problem-cc.cc: Check with the same kind of problem too.
+
+2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Check static problem conversion through copy constructor.
 	* include/liboptimization/problem.hh,
 	* include/liboptimization/problem.hxx: Fix problem conversion.
